<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    tools:context=".DetallesActivity" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.80"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="304dp"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/centro_comercial"
                android:textAlignment="center"
                android:textSize="30sp" />
            
            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.36"
                android:text="comercial"
                android:textAlignment="center"
                android:textSize="20sp" />
            
             <TextView
                 android:id="@+id/direccion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_weight="0.36"
                 android:text="14av -3.44"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
             <TextView
                 android:id="@+id/telefono"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="40dp"
                 android:layout_weight="0.36"
                 android:text="2325695"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_weight="0.36"
                 android:text="@string/horarios"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
             <TextView
                 android:id="@+id/horarios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="0.36"
                 android:text="domingo 14:55 - 8:55"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="20dp"
                  android:layout_weight="0.36"
                  android:text="@string/email"
                  android:textAlignment="center"
                  android:textSize="20sp" />
             
             <TextView
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="0.36"
                 android:text="jose@gmail.com"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="10dp"
                  android:layout_marginTop="20dp"
                  android:layout_weight="0.36"
                  android:text="@string/website"
                  android:textAlignment="center"
                  android:textSize="20sp" />
             
             <TextView
                 android:id="@+id/website"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_weight="0.36"
                 android:text="www.sdfsd.dsds"
                 android:textAlignment="center"
                 android:textSize="20sp" />
             
             <Button
		         android:id="@+id/call"
		        android:layout_marginLeft="120dp"
		        android:layout_marginTop="10dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textSize="20sp"
		        android:text="@string/call" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>